# stake-house

./: Cargo.toml
contracts/fungible/: Cargo.toml
contracts/fungible/src/: contract.rs  test.rs
contracts/stake-house/: Cargo.toml
contracts/stake-house/src/: lib.rs
frontend/: app.js  index.html  styles.css
